--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,6 @@ services:
     ports:
       - '5672:5672'
       - '15672:15672'
+    environment:
+      - RABBITMQ_DEFAULT_USER=disysuser
+      - RABBITMQ_DEFAULT_PASS=disyspw
